--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # see https://docs.gitlab.com/ce/ci/yaml/README.html for all available options
 root:
-  stage: test
+  stage: build
   script:
   - ls -l -a
